[gd_scene load_steps=32 format=2]

[ext_resource path="res://sprites/sky/sky.png" type="Texture" id=1]
[ext_resource path="res://src/characters/player1/Player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/characters/player2/Player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/screens/main_scene/Camera.gd" type="Script" id=4]
[ext_resource path="res://src/characters/player2/Player2.gd" type="Script" id=5]
[ext_resource path="res://src/characters/player1/Player1.gd" type="Script" id=6]
[ext_resource path="res://sprites/encounter/ground.png" type="Texture" id=7]
[ext_resource path="res://src/characters/npc/NPC.gd" type="Script" id=8]
[ext_resource path="res://src/characters/npc/NPC.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/encounter/tree1_layer1.png" type="Texture" id=10]
[ext_resource path="res://sprites/encounter/ruin2_layer1.png" type="Texture" id=11]
[ext_resource path="res://sprites/encounter/ruin5_layer1.png" type="Texture" id=12]
[ext_resource path="res://sprites/encounter/ruin4_layer1.png" type="Texture" id=13]
[ext_resource path="res://sprites/encounter/ruin6_layer1.png" type="Texture" id=14]
[ext_resource path="res://sprites/encounter/ruin3_layer1.png" type="Texture" id=15]
[ext_resource path="res://sprites/encounter/rock1_layer1.png" type="Texture" id=16]
[ext_resource path="res://sprites/encounter/bush1_layer1.png" type="Texture" id=17]
[ext_resource path="res://sprites/encounter/mountain1_layer0.png" type="Texture" id=18]
[ext_resource path="res://sprites/encounter/mountain3_layer1.png" type="Texture" id=19]
[ext_resource path="res://sprites/encounter/tree1_layer-1.png" type="Texture" id=20]
[ext_resource path="res://sprites/encounter/mountain1_layer1.png" type="Texture" id=21]
[ext_resource path="res://sprites/encounter/bushes4_layer-2.png" type="Texture" id=22]
[ext_resource path="res://sprites/encounter/bushes10_layer-2.png" type="Texture" id=23]
[ext_resource path="res://sprites/encounter/bushes5_layer-2.png" type="Texture" id=24]
[ext_resource path="res://sprites/encounter/mountain2_layer1.png" type="Texture" id=25]
[ext_resource path="res://src/triggers/Transition.gd" type="Script" id=26]
[ext_resource path="res://src/screens/dialogues/DialogueEncounter.tscn" type="PackedScene" id=27]
[ext_resource path="res://src/characters/npc/NPCCollision.gd" type="Script" id=28]
[ext_resource path="res://src/screens/main_scene/MainScene.tscn" type="PackedScene" id=29]

[sub_resource type="CapsuleShape2D" id=1]
radius = 26.6667
height = 63.3335

[sub_resource type="CircleShape2D" id=2]

[node name="Encounter" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1268, 508 )
scale = Vector2( 0.18, 0.35 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = -177.0
margin_top = -4.0
margin_right = 1915.0
margin_bottom = 1032.0

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 1 )

[node name="Bushes3" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( 550, 890 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 23 )

[node name="Bushes2" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( 1012, 838 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 22 )

[node name="Bushes5" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( 1391, 870 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 22 )
flip_h = true

[node name="Bushes" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( 1699, 905 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 24 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.93, 1 )

[node name="Mountain" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 605.5, 920.3 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 25 )

[node name="Mountain2" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 715, 866 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 21 )

[node name="Mountain3" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 855.5, 871.3 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 19 )

[node name="Mountain4" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 1517, 862 )
scale = Vector2( 0.11, 0.11 )
texture = ExtResource( 19 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.96, 1 )

[node name="Tree" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 157, 900 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 20 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Ground" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 520, 1014 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 7 )

[node name="Ground2" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1617, 1014 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 7 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Area2D" type="Area2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 7.27596e-12, 3.63798e-12 )

[node name="Mountain" type="Sprite" parent="ParallaxBackground/ParallaxLayer3/Area2D"]
position = Vector2( 1258, 787 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 18 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ParallaxBackground/ParallaxLayer3/Area2D"]
visible = false
position = Vector2( 1260, 605 )
scale = Vector2( 0.1, 0.1 )
polygon = PoolVector2Array( -4400, 4300, 4400, 4300, 0, 0 )

[node name="NPC" parent="." groups=["NPC"] instance=ExtResource( 9 )]
position = Vector2( 767, 982 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="NPC"]
script = ExtResource( 28 )
player1 = NodePath("../../Player1")
player2 = NodePath("../../Player2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Area2D"]
position = Vector2( 1.66675, -1.66675 )
shape = SubResource( 1 )

[node name="DialogueEncounter" parent="NPC/Area2D" instance=ExtResource( 27 )]
layer = 2
visible = false
offset = Vector2( 450, 730 )
scale = Vector2( 1.5, 1.5 )
transform = Transform2D( 1.5, 0, 0, 1.5, 450, 730 )
player1 = NodePath("../../../Player1")
player2 = NodePath("../../../Player2")

[node name="Player1" parent="." groups=["Player"] instance=ExtResource( 2 )]
position = Vector2( 95, 991 )
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 6 )
player2 = NodePath("../Player2")
speed = 100

[node name="Player2" parent="." groups=["Player"] instance=ExtResource( 3 )]
position = Vector2( 74, 998 )
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 5 )
player1 = NodePath("../Player1")
speed = 100

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 1

[node name="Area2D" type="Area2D" parent="ParallaxBackground2"]
position = Vector2( 1843.95, 1000.35 )
script = ExtResource( 26 )
scene = ExtResource( 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground2/Area2D"]
shape = SubResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]

[node name="Rock11" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1446.8, 1010.85 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 12 )

[node name="Rock12" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1549, 1028 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )

[node name="Rock10" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1491, 1040 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )

[node name="Rock14" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1587, 1003 )
scale = Vector2( 0.078477, 0.0694455 )
texture = ExtResource( 14 )

[node name="Rock13" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1631.8, 969.85 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 14 )

[node name="Rock" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1004.8, 1006.8 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 11 )

[node name="Rock2" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1058.8, 1011.8 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 15 )

[node name="Rock3" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1183, 1021 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )

[node name="Rock4" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1236.8, 992.8 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 12 )

[node name="Rock5" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1282.8, 1017.8 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )

[node name="Rock6" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1341.8, 959.8 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 14 )

[node name="Rock7" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1383.55, 994.725 )
scale = Vector2( 0.078477, 0.0694455 )
texture = ExtResource( 14 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground2"]

[node name="Bush" type="Sprite" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2( 76, 1002 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 17 )

[node name="Tree" type="Sprite" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2( 285, 932 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )

[node name="Rock" type="Sprite" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2( 1797.95, 909.35 )
scale = Vector2( 0.11, 0.11 )
texture = ExtResource( 16 )

[node name="MultiTargetCamera2D" type="Camera2D" parent="."]
position = Vector2( 72, 0 )
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
editor_draw_limits = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1, 1 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1035
limit_smoothed = true
editor_draw_limits = true
script = ExtResource( 4 )
object1 = NodePath("../Player1")
object2 = NodePath("../Player2")

[connection signal="body_entered" from="ParallaxBackground2/Area2D" to="ParallaxBackground2/Area2D" method="_on_Area2D_body_entered"]
